--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
 	<title>Precision Client (1.5.2-beta_0.2)</title>
 	<meta charset="UTF-8" />
-	<meta content="Precision Client is a custom eaglercraft client with QOL features, custom texture packs, and more." name="description" />
-	<meta content="//precisionclient.vercel.app" name="url" />
+	<meta content="TotoB12 Client is a custom eaglercraft client with QOL features, custom texture packs, and more." name="description" />
+	<meta content="//totob12.github.io" name="url" />
 	<meta content="EtcherFX" name="author" />
-	<meta content="Precision Client" property="og:title" />
+	<meta content="TotoB12 Client" property="og:title" />
 	<meta content="en-US" property="og:locale" />
 	<meta content="website" property="og:type" />
-	<meta content="//precisionclient.vercel.app" property="og:url" />
+	<meta content="//totob12.github.io" property="og:url" />
 	<!--meta content="IMAGE" property="og:image"/>-->
-	<meta content="Precision Client is a custom eaglercraft client with QOL features, custom texture packs, and more."
+	<meta content="TotoB12 Client is a custom eaglercraft client with QOL features, custom texture packs, and more."
 		property="og:description" />
 	<script type="text/javascript" src="eagswebrtc.js"></script>
 	<script type="text/javascript" src="classes.js"></script>
-	<script async src="https://arc.io/widget.min.js#pchPqjfw"></script>
 	<style>
 		@font-face {
 			font-family: "Product Sans";
@@ -96,8 +95,6 @@
 							{ serverName: "ArchMC", serverAddress: "wss://web.arch.lol/join", hideAddress: true },
 							{ serverName: "Hyper Network", serverAddress: "wss://hyper-network.me", hideAddress: true },
 							{ serverName: "Ayunboom", serverAddress: "wss://sus.shhnowisnottheti.me", hideAddress: true },
-							{ serverName: "Aeon Network", serverAddress: "wss://aeon-network.net/aeon", hideAddress: true },
-							{ serverName: "Sealcraft", serverAddress: "wss://sealcraft.ddns.net:442/servers", hideAddress: true }
 						],
 						relays: [
 							{ addr: "wss://relay.deev.is/", name: "lax1dude relay #1", primary: relayId == 0 },
