--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta content="TotoB12 Client is a custom eaglercraft client with QOL features, custom texture packs, and more." name="description" />
 	<meta content="//totob12.github.io" name="url" />
-	<meta content="EtcherFX" name="author" />
+	<meta content="TotoB12" name="author" />
 	<meta content="TotoB12 Client" property="og:title" />
 	<meta content="en-US" property="og:locale" />
 	<meta content="website" property="og:type" />
@@ -14,6 +14,8 @@
 	<!--meta content="IMAGE" property="og:image"/>-->
 	<meta content="TotoB12 Client is a custom eaglercraft client with QOL features, custom texture packs, and more."
 		property="og:description" />
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico">
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/TotoB12/totob12.github.io/main/things/favicon.ico">
 	<script type="text/javascript" src="eagswebrtc.js"></script>
 	<script type="text/javascript" src="classes.js"></script>
 	<style>
