--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Precision Client (1.5.2-beta_0.2)</title>
+	<title>TotoB12 Client (1.5.2-beta_0.2)</title>
 	<meta charset="UTF-8" />
 	<meta content="TotoB12 Client is a custom eaglercraft client with QOL features, custom texture packs, and more." name="description" />
 	<meta content="//totob12.github.io" name="url" />
@@ -57,7 +57,7 @@
 				background-repeat: no-repeat;
 			}
 		</style>
-		<h1>Precision Client</h1>
+		<h1>TotoB12 Client</h1>
 		<h3>Select a texture pack:</h3>
 		<select id="Packs" class="dropdown">
 			<option>-- Choose one --</option>
